# sparta2

./: .gitignore  db.sqlite3  like.sh  pyproject.toml  test.sh
.github/workflows/: ci.yml
sparta/: settings.py  urls.py
sparta/tests/: test_view.py
tabom/apis/v1/: like_router.py
tabom/migrations/: 0001_initial.py  0002_like_unique_user_article.py  0003_article_like_count.py
tabom/services/: article_service.py  like_service.py
tabom/tests/: test_article_service.py  test_auto_now.py  test_like_service.py
tabom/tests/services/: test_article_service.py  test_like_service.py
